--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Reset default styles for all elements */
 * {
   padding: 0;
   margin: 0;
@@ -11,111 +12,116 @@
   box-sizing: border-box;
 }
 
+/* Global settings for HTML */
 html {
-  scroll-behavior: smooth;
+  scroll-behavior: smooth; /* Smooth scrolling behavior */
 }
 
+/* Global styles for the body */
 body {
-  font-family: "Montserrat", sans-serif;
-  line-height: 1.5;
-  color: var(--clr-fg);
-  background-color: var(--clr-bg);
-}
-.empty-row {
-  margin-bottom: 20px; /* Adjust the value to control the amount of space */
+  font-family: "Montserrat", sans-serif; /* Default font family */
+  line-height: 1.5; /* Line height */
+  color: var(--clr-fg); /* Text color */
+  background-color: var(--clr-bg); /* Background color */
 }
 
+/* Variables for color and styling */
 .body {
-  --clr-bg: #fcfcfc;
-  --clr-bg-alt: #fff;
-  --clr-fg: #555;
-  --clr-fg-alt: #444;
-  --clr-primary: #f87911;
-  --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  --clr-bg: #fcfcfc; /* Light background color */
+  --clr-bg-alt: #fff; /* Alternate background color */
+  --clr-fg: #555; /* Default foreground text color */
+  --clr-fg-alt: #444; /* Alternate foreground text color */
+  --clr-primary: #f87911; /* Primary color */
+  --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; /* Box shadow */
 }
 
-
+/* Selection styling */
 ::-moz-selection {
-  background: var(--clr-primary);
-  color: var(--clr-bg);
+  background: var(--clr-primary); /* Selected text background */
+  color: var(--clr-bg); /* Selected text color */
 }
 
-
-h1,
-h2,
-h3,
-h4 {
-  line-height: 1.2;
-  color: var(--clr-fg-alt);
+/* Heading styles */
+h1, h2, h3, h4 {
+  line-height: 1.2; /* Heading line height */
+  color: var(--clr-fg-alt); /* Heading text color */
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 4rem; /* Heading 1 font size */
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 2rem; /* Heading 2 font size */
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.5rem; /* Heading 3 font size */
 }
 
 h4 {
-  font-size: 1.3rem;
+  font-size: 1.3rem; /* Heading 4 font size */
 }
 
+/* Unordered list styling */
 ul {
-  list-style-type: none;
+  list-style-type: none; /* Remove default list styles */
 }
 
+/* Anchor tag styling */
 a {
-  text-decoration: none;
+  text-decoration: none; /* Remove underline from links */
 }
 
+/* Button styling */
 button {
-  cursor: pointer;
+  cursor: pointer; /* Pointer cursor for buttons */
 }
 
+/* Media query for smaller screens */
 @media (max-width: 900px) {
   h1 {
-    font-size: 2.6rem;
+    font-size: 2.6rem; /* Adjusted heading 1 font size */
   }
 }
 
+/* Link styles */
 .link {
-  color: var(--clr-primary);
-  padding: 0 0 0.3em 0;
+  color: var(--clr-primary); /* Link text color */
+  padding: 0 0 0.3em 0; /* Link padding */
   position: relative;
 }
-.link--nav{
+
+/* Navigation link styles */
+.link--nav {
   display: flex;
   align-items: center;
   margin-top: 10px;
-  transition: transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out; /* Smooth transform on hover */
 }
 
 .link--nav:hover {
-  transform: translateY(-3px);
+  transform: translateY(-3px); /* Lift on hover */
 }
 
 .link--icon {
-  color: var(--clr-fg);
-  font-size: 1.2rem;
+  color: var(--clr-fg); /* Icon color */
+  font-size: 1.2rem; /* Icon size */
 }
 
+/* Button styles */
 .btn {
   display: block;
-  padding: 0.8em 1.4em;
-  font-weight: 500;
-  font-size: 0.9rem;
-  text-transform: lowercase;
-  transition: transform 0.2s ease-in-out;
+  padding: 0.8em 1.4em; /* Button padding */
+  font-weight: 500; /* Button font weight */
+  font-size: 0.9rem; /* Button font size */
+  text-transform: lowercase; /* Button text transformation */
+  transition: transform 0.2s ease-in-out; /* Smooth transform on hover */
 }
 
 .btn--outline {
-  color: var(--clr-primary);
-  border: 2px solid var(--clr-primary);
+  color: var(--clr-primary); /* Button outline text color */
+  border: 2px solid var(--clr-primary); /* Button outline border */
   position: relative;
   overflow: hidden;
   z-index: 1;
@@ -123,7 +129,7 @@ button {
 
 .btn--outline:focus,
 .btn--outline:hover {
-  color: var(--clr-bg);
+  color: var(--clr-bg); /* Button outline text color on hover */
 }
 
 .btn--outline:before {
@@ -144,38 +150,39 @@ button {
 }
 
 .btn--plain {
-  text-transform: initial;
-  background-color: var(--clr-bg-alt);
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+  text-transform: initial; /* Button plain text transformation */
+  background-color: var(--clr-bg-alt); /* Button plain background color */
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px; /* Button plain box shadow */
   border: 0;
 }
 
 .btn--plain:hover {
-  transform: translateY(-4px);
+  transform: translateY(-4px); /* Lift on hover */
 }
 
 .btn--icon {
-  padding: 0;
-  font-size: 1.2rem;
+  padding: 0; /* Button icon padding */
+  font-size: 1.2rem; /* Button icon size */
 }
 
 .btn--icon:hover,
 .btn--icon:focus {
-  color: var(--clr-primary);
+  color: var(--clr-primary); /* Button icon text color on hover */
 }
 
 .btn--icon:active {
-  transform: translateY(-5px);
+  transform: translateY(-5px); /* Button icon lift on active */
 }
 
+/* Center align items */
 .center {
   display: flex;
   align-items: center;
 }
 
-
+/* Header styles */
 .header {
-  height: 4em;
+  height: 4em; /* Header height */
   max-width: 1500px;
   width: 100%;
   margin: 0;
@@ -184,153 +191,176 @@ button {
   font-size: 20px;
   font-weight: 600;
   position: fixed;
-  background-color: white;
-  border-bottom: 1px solid rgba(236, 96, 8, 0.3);
-  z-index: 1000;
+  background-color: white; /* Header background color */
+  border-bottom: 1px solid rgba(236, 96, 8, 0.3); /* Header border */
+  z-index: 1000; /* Header z-index */
 }
 
+/* Main content container */
 main {
-  max-width: 1000px;
+  max-width: 1000px; /* Maximum width for main content */
   width: 95%;
-  margin: 0 auto;
+  margin: 0 auto; /* Center align main content */
 }
 
+/* Subsection styles */
 .subsection {
-  display: flex;
+  display: flex; /* Flex display for subsection */
 }
-.context__overall{
-  flex-basis:30%;
-  margin-right: 15px;
-  width: 300px;
+
+/* Overall context styling */
+.context__overall {
+  flex-basis: 30%; /* Overall context flex basis */
+  margin-right: 15px; /* Overall context margin */
+  width: 300px; /* Overall context width */
 }
-#info .tab{
-  flex-basis:70%;
+
+/* Info tab styles */
+#info .tab {
+  flex-basis: 70%; /* Info tab flex basis */
 }
-#info .tab-titles{
+
+#info .tab-titles {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15); /* Info tab title border */
 }
+
 .tab-links {
-  padding: 10px 20px; 
-  cursor: pointer; 
+  padding: 10px 20px;
+  cursor: pointer; /* Tab link cursor */
   position: relative;
 }
+
 .tab-links::after {
   content: '';
   width: 0;
   height: 3px;
-  background: var(--clr-primary);
+  background: var(--clr-primary); /* Tab link active background */
   position: absolute;
-  left: 50%; 
+  left: 50%;
   bottom: -4px;
-  transition: width 0.35s ease; 
-  transform: translateX(-50%); 
+  transition: width 0.35s ease;
+  transform: translateX(-50%);
 }
 
 .tab-links.active-link::after {
-  width: 80%;
+  width: 80%; /* Active tab link width */
 }
 
 #info .tab-contents {
-  display: none; 
-  padding: 20px; 
-  width: 700px;
+  display: none;
+  padding: 20px;
+  width: 700px; /* Info tab content width */
 }
 
-.tab-contents span{
+.tab-contents span {
   font-weight: 600;
-  color: rgba(0, 0, 0, 0.9);;
+  color: rgba(0, 0, 0, 0.9);
 }
 
 #info .tab-links.active-link {
-  font-weight: bold; 
+  font-weight: bold; /* Active tab link font weight */
 }
+
 #info .tab-contents.active-tab {
-  display: block; 
+  display: block; /* Display active tab content */
 }
 
-#projects .tab{
-  flex-basis:70%;
-
+/* Projects tab styles */
+#projects .tab {
+  flex-basis: 70%; /* Projects tab flex basis */
 }
-#projects .tab-titles{
+
+#projects .tab-titles {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 200px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15); /* Projects tab title border */
 }
 
 #projects .tab-contents {
-  display: none; 
-  padding: 20px; 
-  width: 1000px;
+  display: none;
+  padding: 20px;
+  width: 1000px; /* Projects tab content width */
 }
-
 
 #projects .tab-links.active-link {
-  font-weight: bold; 
-}
-#projects .tab-contents.active-tab {
-  display: block; 
+  font-weight: bold; /* Active projects tab link font weight */
 }
 
-#skills li{
-  display: block;
-  margin-bottom: 7px;
+#projects .tab-contents.active-tab {
+  display: block; /* Display active projects tab content */
 }
+
+/* Skills list item styles */
+#skills li {
+  display: block;
+  margin-bottom: 7px; /* Skills list item margin */
+}
+
+/* Section grid styling */
 .section {
   display: grid;
   place-items: center;
 }
 
+/* Section title styling */
 .section__title {
-  text-align: center;
-  margin-bottom: 2.0em;
-  text-transform: uppercase;
-  color: var(--clr-primary);
+  text-align: center; /* Center align section title */
+  margin-bottom: 2.0em; /* Section title margin */
+  text-transform: uppercase; /* Section title text transformation */
+  color: var(--clr-primary); /* Section title color */
 }
-#contact >.section__title{
-  margin-bottom: 2em;
+
+/* Contact section title styling */
+#contact > .section__title {
+  margin-bottom: 2em; /* Contact section title margin */
 }
+
+/* Divider styling */
 .divider {
   height: 1px;
   width: 100%;
-  background: var(--clr-fg);
-  margin: 3rem 0;
+  background: var(--clr-fg); /* Divider background */
+  margin: 3rem 0; /* Divider margin */
 }
 
-.nav{
-  position:fixed;
-  background-color: white;
+/* Navigation styles */
+.nav {
+  position: fixed;
+  background-color: white; /* Navigation background */
 }
+
 .nav__list {
   margin-right: 1.5em;
-  display: flex;
+  display: flex; /* Flex display for navigation list */
 }
 
 .nav__list-item {
-  margin-left: 1.5em;
+  margin-left: 1.5em; /* Navigation list item margin */
 }
 
 .nav__btms {
   display: none;
-  width: 1em;
+  width: 1em; /* Navigation bottom width */
 }
 
+/* About section styling */
 .about {
   display: flex;
-  margin-top: 3em;
-  height: 80vh;
+  margin-top: 3em; /* About section margin top */
+  height: 80vh; /* About section height */
 }
+
 .about__img {
-  width: 300px; 
-  max-width: 100%; 
-  height: auto; 
-  margin-right: 4em; 
+  width: 300px;
+  max-width: 100%;
+  height: auto;
+  margin-right: 4em; /* About image margin right */
 }
 
 .about__context {
@@ -338,191 +368,195 @@ main {
 }
 
 .about__name {
-  color: var(--clr-primary);
+  color: var(--clr-primary); /* About name color */
 }
 
 .about__role {
-  font-size: 1.5rem;
-  margin-top: 1.2em;
+  font-size: 1.5rem; /* About role font size */
+  margin-top: 1.2em; /* About role margin top */
 }
 
 .about__desc {
-  font-size: 1rem;
-  max-width: 600px;
+  font-size: 1rem; /* About description font size */
+  max-width: 600px; /* About description maximum width */
 }
 
 .about__desc,
 .about__contact {
-  margin-top: 2.4em;
+  margin-top: 2.4em; /* About description and contact margin top */
 }
 
 .about .link--icon {
-  margin-right: 0.8em;
+  margin-right: 0.8em; /* About icon margin right */
 }
 
 .about .btn--outline {
   margin-right: 2em;
-  border-radius: 7px;
+  border-radius: 7px; /* About button outline border radius */
 }
 
+/* Projects grid styling */
 .projects__grid {
   max-width: 1100px;
-  margin: 0 auto;
+  margin: 0 auto; /* Center align projects grid */
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 2em;
-  
+  grid-template-columns: repeat(2, 1fr); /* Projects grid columns */
+  grid-gap: 2em; /* Projects grid gap */
 }
 
+/* Individual project styling */
 .project {
   display: flex;
   padding: 2em;
   margin: 0 20px;
   text-align: center;
   align-items: center;
-  box-shadow: var(--shadow);
-  border-radius: 20px;
-  transition: transform 0.2s linear;
+  box-shadow: var(--shadow); /* Project box shadow */
+  border-radius: 20px; /* Project border radius */
+  transition: transform 0.2s linear; /* Smooth transform on hover */
 }
-.prj__img{
+
+.prj__img {
   height: 100px;
-  width: 100px;
+  width: 100px; /* Project image size */
   border-radius: 2px;
-  margin-right: 20px;
+  margin-right: 20px; /* Project image margin right */
   display: flex;
   justify-content: center; /* Horizontal centering */
 }
 
-.prj__link{
+.prj__link {
   text-decoration: underline;
-  color: blue;
+  color: blue; /* Project link color */
   opacity: 0.7;
   display: block;
-  margin-top: 7px;
+  margin-top: 7px; /* Project link margin top */
 }
+
 .prj_duration {
-  opacity: 0.6;
+  opacity: 0.6; /* Project duration opacity */
 }
+
 .project:hover {
-  transform: translateY(-7px);
+  transform: translateY(-7px); /* Lift on hover */
 }
 
 .project__description {
-  margin-top: 1em;
+  margin-top: 1em; /* Project description margin top */
 }
 
 .project__stack {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 1.2em 0;
+  margin: 1.2em 0; /* Project stack margin */
 }
 
 .project__stack-item {
   margin: 0.5em;
   font-weight: 500;
   font-size: 0.8rem;
-  color: var(--clr-fg-alt);
+  color: var(--clr-fg-alt); /* Project stack item color */
 }
 
 .project .link--icon {
-  margin-left: 0.5em;
+  margin-left: 0.5em; /* Project icon margin left */
 }
 
-
-
-
-
-
-
-
+/* Contact section styling */
 #contact {
   display: flex;
   flex-direction: column;
 }
-
-
 
 .contact__box {
   display: flex;
   flex-direction: column;
   padding: 2em;
   margin: 0 auto;
-  border-bottom-right-radius: 40px;
+  border-bottom-right-radius: 40px; /* Contact box border radius */
   text-justify: center;
   justify-content: center;
-  box-shadow: var(--shadow);
-  transition: transform 0.2s ease-in-out;
+  box-shadow: var(--shadow); /* Contact box shadow */
+  transition: transform 0.2s ease-in-out; /* Smooth transform on hover */
 }
+
 .contact__box:hover {
-  transform: translateY(-7px);
+  transform: translateY(-7px); /* Lift on hover */
 }
-.contact__context{
+
+.contact__context {
   display: flex;
   align-items: center;
-  margin-bottom: 30px;
-}
-.contact__context:last-child{
-  margin-bottom: 0px;
-}
-.contact__context i{
-  margin-right: 40px;
-  opacity: 0.9;
-}
-.contact__context span{
-  font-size: 20px;
+  margin-bottom: 30px; /* Contact context margin bottom */
 }
 
-.contact__context:nth-child(3){
-  font-weight: 600;
+.contact__context:last-child {
+  margin-bottom: 0px; /* Last contact context margin bottom */
 }
-.contact-link{
+
+.contact__context i {
+  margin-right: 40px;
+  opacity: 0.9; /* Contact context icon opacity */
+}
+
+.contact__context span {
+  font-size: 20px; /* Contact context font size */
+}
+
+.contact__context:nth-child(3) {
+  font-weight: 600; /* Third contact context font weight */
+}
+
+.contact-link {
   text-decoration: underline;
-  color: blue;
+  color: blue; /* Contact link color */
 }
+
+/* Footer styling */
 .footer {
   padding: 3em 0;
-  margin-top: 4em;
-  text-align: center;
+  margin-top: 4em; /* Footer margin top */
+  text-align: center; /* Center align footer content */
 }
 
-
-
+/* Label styling */
 label {
   width: 100%;
-  font-weight: bold;
+  font-weight: bold; /* Label font weight */
 }
 
+/* Input styling */
 input {
-  border: 1px solid var(--clr-fg);
-  height: 32px;
-  border-radius: 0.1rem;
-  padding: 0 0.5rem;
+  border: 1px solid var(--clr-fg); /* Input border */
+  height: 32px; /* Input height */
+  border-radius: 0.1rem; /* Input border radius */
+  padding: 0 0.5rem; /* Input padding */
 }
 
 textarea {
-  border: 1px solid var(--clr-fg);
-  border-radius: 0.1rem;
-  padding: 0.5rem;
+  border: 1px solid var(--clr-fg); /* Textarea border */
+  border-radius: 0.1rem; /* Textarea border radius */
+  padding: 0.5rem; /* Textarea padding */
 }
 
 input,
 input:valid {
-  border: 1px solid var(--clr-fg);
+  border: 1px solid var(--clr-fg); /* Valid input border */
 }
 
 input:invalid {
-  border: 1px solid rgba(255, 0, 0, 0.6);
+  border: 1px solid rgba(255, 0, 0, 0.6); /* Invalid input border */
 }
 
 form > div {
   display: grid;
-  margin-bottom: 1em;
+  margin-bottom: 1em; /* Form div margin bottom */
 }
 
 input[type="radio"] {
   margin-top: -1px;
-  vertical-align: middle;
+  vertical-align: middle; /* Radio button vertical alignment */
 }
 
 fieldset {
@@ -530,24 +564,21 @@ fieldset {
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: 1fr;
   grid-gap: 2px;
-  place-items: start;
-}
-
-fieldset > span > label {
-  font-weight: 300;
+  place-items: start; /* Fieldset item placement */
 }
 
 form > button {
-  width: 100%;
+  width: 100%; /* Full width button */
 }
 
+/* Media query for smaller screens */
 @media (max-width: 600px) {
   .header {
-    height: 6em;
+    height: 6em; /* Adjusted header height */
   }
 
   .section {
-    margin-top: 4em;
+    margin-top: 4em; /* Adjusted section margin top */
   }
 
   .nav__list {
@@ -560,43 +591,42 @@ form > button {
     background-color: var(--clr-bg);
     width: 0;
     overflow: hidden;
-    transition: width 0.2s ease-in-out;
+    transition: width 0.2s ease-in-out; /* Smooth transition for nav list */
   }
 
   .display-nav-list {
-    width: 100%;
+    width: 100%; /* Display nav list width */
   }
 
   .projects__grid {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr; /* Adjusted projects grid columns */
   }
 
   .nav__list-item {
-    margin: 0.5em 0;
+    margin: 0.5em 0; /* Adjusted nav list item margin */
   }
 
   .nav__btms {
     display: flex;
-    margin-left: 0.8em;
+    margin-left: 0.8em; /* Adjusted nav bottom margin left */
   }
 
-
   .footer {
-    padding: 2em;
-    margin-top: 3em;
+    padding: 2em; /* Adjusted footer padding */
+    margin-top: 3em; /* Adjusted footer margin top */
   }
 
   .scroll-container {
-    display: none;
+    display: none; /* Hide scroll container */
   }
 
   .education_list {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr; /* Adjusted education list columns */
   }
 
   .subsection {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
-    grid-gap: 2rem;
+    grid-gap: 2rem; /* Adjusted subsection grid gap */
   }
 }
